--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,11 @@
   padding: 0;
   box-sizing: 0;
   font-family: 'Montserrat', sans-serif;
+  background-color: #d4f1f4;
 }
+
+/* cartes : Navy Blue */
+/*  Navbar : Blue Grotto */
+/*  Button : Blue Green */
+/* Button:hover : Grotto Blue */
+/* Background: baby blue */
