--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
   background-color: #d4f1f4;
 }
 
-/* cartes : Navy Blue */
-/*  Navbar : Blue Grotto */
-/*  Button : Blue Green */
-/* Button:hover : Grotto Blue */
-/* Background: baby blue */
+/* cartes : Navy Blue #05445E */
+/*  Navbar : Blue Grotto  #189AB4 */
+/*  Button : Blue Green  #189AB4 */
+/* Button:hover : Grotto Blue #189AB4 */
+/* Background: baby blue #D4F1F4 */
