--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Cheikh CSS */
+.DashboardApprenant-contener{
+    height: 100vh;
+    background-color: #6c757d;;
+}
+.icon{
+    width: 50px;
+    height: 37px;
+}
+/* Fin Cheikh CSS */
+
 /* Mariama CSS */
 .contain-connect{
     height: 100vh !important;
@@ -32,3 +49,4 @@
 .tir{
     border-radius: 20px !important;
 }
+/* Fin Mariama CSS */
