--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,88 @@
 /*  Button : Blue Green */
 /* Button:hover : Grotto Blue */
 /* Background: baby blue */
+
+/* programmes */
+.program-card {
+  border: 1px solid #ccc;
+  padding: 16px;
+  border-radius: 8px;
+  width: 300px; /* or any desired width */
+  margin: 8px;
+}
+
+.program-card img {
+  width: 100%;
+  height: auto;
+  border-radius: 4px;
+}
+
+.program-card h3 {
+  font-size: 1.2rem;
+  margin-top: 8px;
+}
+
+.program-card p {
+  font-size: 1rem;
+  color: #666;
+}
+
+.program-card button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.program-card button:hover {
+  background-color: #0056b3;
+}
+
+.program-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.course-card {
+  width: 250px;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  text-align: center;
+}
+
+.course-image {
+  width: 100%;
+  height: auto;
+}
+
+.course-title,
+.course-author,
+.course-progress {
+  margin: 10px 0;
+}
+
+.category-card {
+  width: 200px;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  margin: 10px;
+}
+
+.category-icon {
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+.category-title {
+  font-weight: bold;
+}
+
+.category-description {
+  color: #666;
+}
