--- a/src/App.css
+++ b/src/App.css
@@ -14,22 +14,37 @@
 
 /* Cheikh CSS */
 .containerApprenant {
-    width: 50%;
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 25px;
 }
 .rowAppenant{
-
+    width: 100%;
+    height: 100%;
 }
 .colApprenant{
-    
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: center; */
+    align-items: center;
 }
 .cardSpan{
     flex-wrap: wrap;
 }
+.mySpan{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+}
 .icon {
-    width: 50px;
-    height: 37px;
+    width: 65px;
+    height: 100%;
+    border-radius: 100%;
 }
 
 .publication{
@@ -38,6 +53,9 @@
     /* padding: 10% 10%; */
 }
 
+.textarea{
+    border-radius: 25px;
+}
 /* Fin Cheikh CSS */
 
 /* Mariama CSS */
