--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-* {
+
+*{
+  font-family: 'Montserrat', sans-serif;
+}
+
+body{
   margin: 0;
   padding: 0;
   box-sizing: 0;
-  font-family: 'Montserrat', sans-serif;
-  background-color: #d4f1f4;
+  background-color: #fff;
 }
 
 /* cartes : Navy Blue */
@@ -12,3 +16,70 @@
 /*  Button : Blue Green */
 /* Button:hover : Grotto Blue */
 /* Background: baby blue */
+
+/*----------Sidebar---------*/
+.sidebar{
+  height: 100vh;
+  padding: 1%;
+}
+.sidebar .list-group-item:hover{
+  background-color: #189AB4 !important;
+  color: #fff;
+}
+
+.sidebar .list-group-item{
+  padding: 7% 0 7%;
+  font-size: 17px;
+  font-weight: 500;
+}
+
+.sidebar .icon{
+  font-size: 25px !important;
+}
+
+#contentSidebar{
+  background-color: #D4F1F4;
+  border-radius: 20px 20px 20px 20px;
+}
+
+@media screen and (max-width: 689px){
+  .sidebar .list-group-item .title{
+    display: none;
+  }
+
+  .sidebar .list-group-item:hover{
+    border-radius: 10%;
+    transform: scale(1.1);
+    transition: 1s;
+  }
+
+  .sidebar .list-group-item{
+    padding-top: 0 !important;
+    padding-bottom: 1.5% !important;
+
+  }
+
+  .sidebar{
+    margin-top: 0 !important;
+    height: 100%;
+    padding: 0 !important;
+  }
+
+  .sidebar .icon{
+    font-size: 30px !important;
+    padding-left: 0 !important;
+  }
+
+  .sidebar .brand-name{
+    display: none;
+  }
+
+  .sidebar #contentSidebar{
+    border-radius: 0;
+  }
+
+  .sidebar .linkSidebar{
+    display: flex;
+    margin-left: 4px;
+  }
+}
