--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,10 @@
 .height-img{
     height: 100vh !important;
     width: 50% !important;
-    padding:15px
+    padding:15px;
+    background-image:url(assets/images/affiche.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 
 }
 .height-img img{
@@ -18,16 +21,18 @@
     width: 40% !important;
     margin: 15px auto;
 }
-.bouton-switch{
-    border: 1px solid #d4f1f4;
-    display: flex;
-    justify-content: space-around;
-    border-radius: 33px;
-    padding:5px ;
-    margin: auto;
-    width: 260px;
-    height: 40px;
-    background-color: #d4f1f4; 
+
+.bouton-switch button {
+    flex: 1;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background-color: transparent;
+  }
+
+  .bouton-switch .active {
+    background-color: #b3e0f2;
+    border-radius: 30px;
 }
 .tir{
     height: 30px;
@@ -58,6 +63,7 @@
 .oubli{
     color: #189AB4;
 }
+/* mariama CSS */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
   margin: 0;
