--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
+  font-family: "Montserrat", sans-serif;
+}
+
+body {
   margin: 0;
   padding: 0;
   box-sizing: 0;
-  font-family: 'Montserrat', sans-serif;
-  background-color: #d4f1f4;
+  /* background-color: #d4f4d9; */
 }
 
 /* cartes : Navy Blue */
 /*  Navbar : Blue Grotto */
 /*  Button : Blue Green */
 /* Button:hover : Grotto Blue */
-/* Background: baby blue */
+/* Background: baby Blue */
+
+/* =============== Je crée ici le CSS que je vais Utilisé Début =============== */
+
+.NavBarContainer {
+  width: 100%;
+  background-color: #189ab4;
+  height: auto;
+  border-radius: 10px;
+  border-bottom-left-radius: 35px;
+  border-bottom-right-radius: 35px;
+}
+.LogoConta {
+  width: 20%;
+  height: auto;
+}
+.LogoConta2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+}
+.SecRightNav {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+.ProfilSpace {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.NotifIcone {
+  width: 90px;
+  color:#D4F1F4;
+}
+.MessageIcone {
+  color:#D4F1F4;
+  width: 90px;
+}
+.ProfilUser {
+  border-radius: 50%;
+}
+.Mod{
+  cursor: pointer;
+}
+
+/* =============== Je crée ici le CSS que je vais Utilisé Fin =============== */
