--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,7 @@ body {
   background-color: #d4f1f4;
 }
 
-/* cartes : Navy Blue #05445E */
-/*  Navbar : Blue Grotto  #189AB4 */
-/*  Button : Blue Green  #189AB4 */
-/* Button:hover : Grotto Blue #189AB4 */
-/* Background: baby blue #D4F1F4 */
+/* Buttons :  #6B240C */
+/*  Navbar :   #994D1C */
+/*  Button :   #E48F45 */
+/* Cartes :  #F5CCA0 */
