--- a/src/App.css
+++ b/src/App.css
@@ -22,21 +22,22 @@ body {
 
 .NavBarContainer {
   width: 100%;
-  background-color: #189ab4;
-  height: auto;
-  border-radius: 10px;
-  border-bottom-left-radius: 35px;
-  border-bottom-right-radius: 35px;
+   background-color: #dd782c;
+  height: 80px;
+  border-radius:2px;
+
 }
 .LogoConta {
-  width: 20%;
+  width: 30%;
   height: auto;
 }
 .LogoConta2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100px;
+   height: 100%;
+  width: 140px;
+  /* background-color: red; */
 }
 .SecRightNav {
   width: 80%;
@@ -64,6 +65,10 @@ body {
 .Mod{
   cursor: pointer;
 }
+/* .LOGONAV{
+  height: 200px;
+  width: 200px;
+} */
 
 /* =============== Je crée ici le CSS que je vais Utilisé Fin =============== */
 
