--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,10 @@ body{
   border-radius: 20px 20px 20px 20px;
 }
 
+.modal-dialog{
+  max-width: 60% !important;
+}
+
 @media screen and (max-width: 689px){
   .sidebar .list-group-item .title{
     display: none;
