--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,12 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 25px;
 }
+.boxshadow:hover{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.sizeHover:hover{
+    font-size: 18px;
+}
 .rowAppenant{
     width: 100%;
     height: 100%;
@@ -74,6 +80,12 @@
     display: block;
 }
 
+.mainColor{
+    color: #e16b07;
+}
+.mainBackgrounColor{
+    color: #e16b07;
+}
 
 /* Fin Cheikh CSS */
 
