--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,19 @@
 /* Background: baby blue #D4F1F4 */
 
 /* Cheikh CSS */
+.body{
+    background: var(--surface-ground);
+    color: var(--text-color);
+    padding: 1rem;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.card {
+    background: var(--surface-card);
+    padding: 2rem;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+}
 .containerApprenant {
     display: flex;
     justify-content: center;
