--- a/src/assets/css/single-program.css
+++ b/src/assets/css/single-program.css
@@ -40,15 +40,16 @@
 }
 
 .blog-card {
-  width: 200px;
+  width: 24%;
   text-align: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  margin: 10px;
+  /* margin: 10px; */
   transition: transform 0.2s;
 }
 
 .blog-card:hover {
   transform: translateY(-5px);
+  border-radius: 15px;
 }
 
 .blog-card img {
