--- a/src/App.css
+++ b/src/App.css
@@ -267,7 +267,7 @@ body {
   color: #e16b07;
 }
 
-.Lbtn {
+/* .Lbtn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -283,7 +283,7 @@ body {
     &:hover {
         transform: scale(1.15);
     }
-}
+} */
 /* Fin Cheikh CSS */
 
 /* Mariama CSS */
