--- a/src/assets/css/single-program.css
+++ b/src/assets/css/single-program.css
@@ -35,21 +35,26 @@
 
 .reading-blog-list {
   display: flex;
-  justify-content: space-around;
   margin-top: 50px;
+}
+.lolo {
+  gap: 2px;
+  width: max-content;
 }
 
 .blog-card {
-  width: 25%;
   text-align: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  /* margin: 10px; */
   transition: transform 0.2s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 10px;
 }
 
 .blog-card:hover {
   transform: translateY(-5px);
-  border-radius: 15px;
 }
 
 .blog-card img {
@@ -61,9 +66,4 @@
 .blog-card h2 {
   font-size: 1.2em;
   margin: 10px 0;
-}
-@media (max-width: 1024px) {
-  .blog-card {
-    width: 100%;
-  }
 }
