--- a/src/App.css
+++ b/src/App.css
@@ -127,3 +127,22 @@
 .oubli{
     color: #189AB4;
 }
+.program-img{
+    width:250px;
+    height: 200px;
+}
+.program-img img{
+    width:100%;
+    height: 100%;
+}
+.progress-bar{
+    background-color: #e16d07;
+}
+.bg-cours{
+    background-color:#f0c5a939;
+    height: 100vh;
+}
+.divard{
+    display: flex !important;
+}
+/*   Fin Mariama Css */
