--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -401,7 +401,7 @@ body {
 .CouleurC {
   background-color: #a62ac877;
 }
-.ContaCardDsb{
+.ContaCardDsb {
   flex-wrap: wrap;
 }
 .ContaCardDsb {
@@ -418,7 +418,6 @@ body {
     justify-content: center;
   }
 }
-
 
 /*============ Le Dashboard CSS Fin ============*/
 
@@ -737,12 +736,10 @@ body {
 }
 .bodyContent {
   margin-left: 18%;
-
 }
 .car img {
   height: 150px;
   width: 100%;
-
 }
 .car img {
   height: 150px;
@@ -756,22 +753,22 @@ body {
     margin-bottom: 30px;
   }
 }
-.program-img{
-    width:250px;
-    height: 200px;
+.program-img {
+  width: 250px;
+  height: 200px;
 }
-.program-img img{
-    width:100%;
-    height: 100%;
+.program-img img {
+  width: 100%;
+  height: 100%;
 }
-.progress-bar{
-    background-color: #e16d07;
+.progress-bar {
+  background-color: #e16d07;
 }
-.bg-cours{
-    background-color:#f0c5a939;
-    height: 100vh;
+.bg-cours {
+  background-color: #f0c5a939;
+  height: 100vh;
 }
-.divard{
-    display: flex !important;
+.divard {
+  display: flex !important;
 }
 /*   Fin Mariama Css */
