--- a/src/components/Certification.css
+++ b/src/components/Certification.css
@@ -1,9 +1,15 @@
 
-.reduct{
-    width: 150px;
+.reduct {
+    width: 200px;
 }
 
 .DG{
     padding-top: 40px !important;
     font-size: 10px;
+}
+.dash{
+    border: dashed grey;
+}
+.ajout{
+    width: 100px;
 }
