--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -266,7 +266,7 @@ body {
 .mainBackgrounColor {
   color: #e16b07;
 }
-.tableShadow{
+.tableShadow {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 /* Fin Cheikh CSS */
@@ -292,10 +292,9 @@ body {
   margin: auto;
   height: 100vh;
 }
-.imagel{
+.imagel {
   height: 200px;
   width: 200px;
-  
 }
 .tire {
   border-radius: 33px !important;
@@ -550,7 +549,6 @@ body {
 .sidebar {
   height: 100vh;
   padding: 1%;
-
 }
 .sidebar .list-group-item:hover {
   background-color: #48a93c !important;
@@ -735,10 +733,9 @@ body {
   background-color: #e16d07;
 }
 .bg-cours {
-
   height: 100vh;
 }
-.divard{
+.divard {
   display: flex !important;
 }
 /*   Fin Mariama Css */
@@ -754,15 +751,16 @@ body {
 .form-demo .card .field {
   margin-bottom: 1.5rem;
 }
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1024px) {
   .form-demo .card {
     width: 80%;
+    min-width: 95vw;
   }
 }
 @media screen and (max-width: 640px) {
   .form-demo .card {
     width: 100%;
-    min-width: 0;
+    min-width: 93vw;
   }
 }
 /*Fin */
