--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,173 @@ body {
   background-color: #fff;
 }
 
+
+      /* Quizzs CSS */ 
+ 
+ 
+.module-container { 
+  display: flex; 
+} 
+ 
+.sidebar { 
+  /* width: 25%;  */
+  background-color: #f0f2f5; 
+  height: 100vh; 
+  position: fixed; 
+  overflow-y: scroll; 
+} 
+ 
+.file{ 
+   
+  
+   padding: 0px 10px; 
+  
+ } 
+.titre { 
+  font-size: 32px; 
+  font-weight: 500; 
+  text-align: center;
+} 
+ 
+.main-content { 
+  width: 100%; 
+  padding: 20px; 
+  margin: 10px;
+  margin-left: 40%; 
+  text-align: left !important;
+ 
+  
+  
+
+} 
+ 
+input[type=radio] { 
+  --webkit-appearance: none; 
+  -moz-appearance: none; 
+  appearance: none; 
+ 
+  border-radius: 50%; 
+  width: 16px; 
+  height: 16px; 
+  /* background-color: #48a93c !important;  */
+  border: 2px solid #999; 
+ 
+} 
+ 
+input:checked { 
+  border: 2px solid #007bff !important; 
+  background-color: #48a93c; 
+ 
+} 
+ 
+ 
+.lesson-item { 
+  background-color: white; 
+  margin-bottom: 10px; 
+  padding: 10px; 
+  width: 100%; 
+  cursor: pointer; 
+  border-left: 5px solid #48a93c !important; 
+  /* Blue border for active item */ 
+} 
+ 
+.content-block { 
+  background-color: white; 
+  width: 100%; 
+  margin-bottom: 10px; 
+  cursor: pointer; 
+  padding: 20px; 
+  border-left: 5px solid #48a93c !important; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+} 
+ 
+.introduction { 
+  font-size: 18px; 
+  margin-bottom: 20px;
+ text-align: left;
+ margin-left: 8%;
+} 
+ 
+.label { 
+  margin-left: 5px; 
+  font-family: Montserrat; 
+  font-size: 16px; 
+  color: #000000;
+} 
+ 
+.paragraph { 
+  margin-top: 5%; 
+  color: black; 
+  width: 100%; 
+  margin-left: 5px; 
+} 
+ 
+ 
+.dig { 
+  /* background-color: #3084b5;  */
+  color: black; 
+  font-size: 16px; 
+  width: 100%; 
+  height: 10vh; 
+  padding-left: 10px; 
+  padding-top: 20px; 
+ 
+} 
+ 
+.sous { 
+  border-radius: 20px; 
+  height: 50px; 
+  font-size: 22px; 
+  width: 30%; 
+  margin-left: 25%; 
+  margin-top: 30px; 
+  background-color: #48a93c; 
+  border: none; 
+  color: white; 
+  font-weight: bold; 
+} 
+ 
+.paragraph { 
+  font-size: 18px; 
+  font-weight: 700; 
+} 
+ 
+@media (max-width: 1024px) { 
+ 
+  .module-container { 
+    flex-direction: column; 
+    /* width: 100%; */ 
+  } 
+ 
+  .sidebar { 
+    width: 100%; 
+    position: relative; 
+  } 
+ 
+  .main-content { 
+    width: 100%; 
+    margin-left: 30%; 
+  } 
+ 
+  .lesson-item { 
+    background-color: white; 
+    margin-bottom: 10px; 
+    padding: 10px; 
+    width: 50%; 
+    border-left: 5px solid #e16d07; 
+    /* Blue border for active item */ 
+  } 
+ 
+  .content-block { 
+    width: 53%; 
+ 
+  } 
+ 
+  .sous { 
+    width: 40%; 
+  } 
+}
+
 .cardpcc {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
