--- a/src/App.css
+++ b/src/App.css
@@ -765,4 +765,12 @@ body {
     min-width: 0;
   }
 }
+
+.archived td{
+  background-color: rgb(247, 239, 239) !important;
+}
+
+.domaine button[aria-label="Upload"]{
+  display: none !important;
+}
 /*Fin */
