--- a/src/App.css
+++ b/src/App.css
@@ -319,18 +319,16 @@ body {
 .oubli {
   color: #189ab4;
 }
-.inputStyle{
+.inputStyle {
   border: 1px solid #3084b5;
   padding: 3px;
   color: white;
   background-color: #3084b5 !important;
   border-radius: 6px;
-
 }
 .output {
-  height:100px;
-  width:100px;
-
+  height: 100px;
+  width: 100px;
 }
 /* Suivi du programme */
 .category-card {
@@ -407,7 +405,7 @@ body {
 .NavBarContainer {
   width: 100%;
   background-color: #fff;
-  
+
   height: 80px;
   border-radius: 2px;
 }
@@ -706,7 +704,6 @@ body {
     width: 100%;
     display: flex;
     justify-content: center;
-    justify-content: space-around;
     position: fixed;
     bottom: 0;
     height: auto;
@@ -718,9 +715,10 @@ body {
     display: flex;
     margin-left: 4px;
   }
+  .GandalTitle {
+    display: none;
+  }
 }
-
-
 
 /*============ A ne pas toucher============*/
 .Side_Content {
@@ -738,6 +736,30 @@ body {
 .car img {
   height: 150px;
   width: 100%;
+}
+.loadingPageLogo {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loadingPageLogo img {
+  animation: pulse 2s infinite ease-in-out;
+  width: 150px;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.1);
+    opacity: 0.7;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 @media (max-width: 1024px) {
